fix overflowing containers

--- a/addons/mass_mailing/static/src/scss/themes/theme_default.scss
+++ b/addons/mass_mailing/static/src/scss/themes/theme_default.scss
@@ -76,6 +76,7 @@ div.col:not([align]) {
 .o_mail_snippet_general {
     width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
 
     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         color: $o-mm-def-text-color;
